--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Learning-JavaScript-Data-Structures-and-Algorithms-Third-Edition-master
 -Livro-Estrutura--de-dados-com-Javascript
+LearningJavaScriptDataStructuresandAlgorithmsThirdEdition_Code
